Fix distortion on individual articles

--- a/client/stylesheets/style.styl
+++ b/client/stylesheets/style.styl
@@ -142,7 +142,6 @@ ul.navbar-right
   
   img.carousel-img
     width 100%
-    max-height 425px
     margin-bottom 20px
   
   a.btn
